2002-04-01  Richard Williamson  <rjw@apple.com>

        Cleaned up lots of potentially stale references to controller.
        
	* WebView.subproj/IFBaseWebControllerPrivate.mm: (-[IFBaseWebControllerPrivate
	dealloc]):
	* WebView.subproj/IFMainURLHandleClient.mm: (-[IFMainURLHandleClient
	initWithDataSource:part:]), (-[IFMainURLHandleClient dealloc]):
	* WebView.subproj/IFWebDataSource.h:
	* WebView.subproj/IFWebDataSource.mm:
	* WebView.subproj/IFWebDataSourcePrivate.mm: (-[IFWebDataSourcePrivate dealloc]),
	(-[IFWebDataSource _setPrimaryLoadComplete:]), (-[IFWebDataSource _setTitle:]):
	* WebView.subproj/IFWebFramePrivate.h:
	* WebView.subproj/IFWebFramePrivate.mm: (-[IFWebFramePrivate dealloc]),
	(-[IFWebFramePrivate setDataSource:]), (-[IFWebFramePrivate
	setProvisionalDataSource:]), (-[IFWebFrame _setController:]), (-[IFWebFrame
	_transitionProvisionalToCommitted]), (-[IFWebFrame _timedLayout:]), (-[IFWebFrame
	_setState:]):

2002-04-01  Richard Williamson  <rjw@apple.com>

        Logging changes.
        Changes to support correct i/frame behavior.
    
	* WebView.subproj/IFBaseWebController.mm: (-[IFBaseWebController
	createFrameNamed:for:inParent:inScrollView:]):
	* WebView.subproj/IFWebController.h:
	* WebView.subproj/IFWebFramePrivate.mm: (-[IFWebFrame _timedLayout:]):
	* WebView.subproj/IFWebViewPrivate.mm: (-[IFWebViewPrivate dealloc]),
	(-[IFWebView _setupScrollers]):

2002-04-01  John Sullivan  <sullivan@apple.com>

	Added method for updating url, title, and/or displayTitle
	on existing entry.

	* History.subproj/IFWebHistory.h:
	* History.subproj/IFWebHistory.m: 
	(-[IFWebHistory	updateURL:title:displayTitle:forURL:]):
	Calls through to IFWebHistoryPrivate.

	* History.subproj/IFWebHistoryPrivate.h:
	* History.subproj/IFWebHistoryPrivate.m: 
	(-[IFWebHistoryPrivate _entryForURLString:]): Broke this out
	from containsURL.
	(-[IFWebHistoryPrivate containsURL:]): Call broken-out method.
	(-[IFWebHistoryPrivate updateURL:title:displayTitle:forURL:]):